--- a/Idiomas/app/src/main/AndroidManifest.xml
+++ b/Idiomas/app/src/main/AndroidManifest.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tienda.cta.com.tiendajuegos">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.idiomas" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".Main"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityRegistro"/>
-        <activity android:name=".ActivityLogin"/>
-        <activity android:name=".Catalogo"/>
-        <activity android:name=".ActivityJuego"/>
-        <activity android:name=".ActivityCRUD"/>
-        <service android:name=".NotificationIntentService"
-            android:exported="false"/>
     </application>
 
 </manifest>
